# AI-Customer-Assistant

./: .env.prod.example  .gitignore  ANALYSIS_CONVERSATION_FLOWS.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  product_test.py  prometheus.yml  pyproject.toml  run.py  stanley1913.json  startup.sh  update.sh
alloy/: config.alloy
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  config.py  logging.py  logging_config.json  main.py  pyproject.toml
backend/api/: agent.py  agent_schema.py  chat.py  convert.py  endpoint.py  healt.py  helper.py  middleware.py  request.py  routes.py  schema.py  two_pass_agent.py  two_pass_schema.py
backend/db/: batcher.py  cocolillys.json  create_tables.py  data_loader.py  delete_tables.py  etcetera.json  kaicollective.json  ohpolly.json  pinklily.json  schema.py  session.py  shopify_data.py  stanley1913.json
backend/prompts/: assessment_prompt.txt  assistant_prompt.txt  loader.py  pass1_intent_prompt.txt  pass2_response_prompt.txt
backend/services/: cache.py  context_manager.py  embedding.py  flagged_sessions.py  session_manager.py  tool.py
backend/utility/: utils.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/context/: CartContext.tsx  (+4 more)
nginx/: nginx.conf  nginx.http.conf
prometheus/: prometheus.yml
promtail/: config.yml
scripts/: deploy.sh  get-ssl.sh  quick-update.sh  setup.sh  update-backend.sh  update.sh
tempo/: tempo.yaml
test/: client.py
(+54 files in other folders)
