[project]
name = "ai-customer-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic[asyncio]>=1.16.5",
    "asyncpg>=0.30.0",
    "docling>=2.43.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "hiredis>=3.2.1",
    "ipykernel>=6.30.1",
    "openai>=1.99.7",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-logging>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "pgvector>=0.4.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "starlette>=0.48.0",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
